--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -25,6 +25,7 @@
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
@@ -32,31 +33,31 @@
                 <TextBlock Text="User Specifics" Style="{StaticResource TextblockTitle}"/>
 
                 <TextBlock Text="{Binding PersonsInHouseHold, StringFormat='Persons in household: {0}', Mode=OneWay}" Grid.Row="1" VerticalAlignment="Center" Height="16" Margin="0,7"/>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding DecrementPersonsInHouseholdCommand}" Grid.Column="1" Grid.Row="1">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding DecrementPersonsInHouseholdCommand}" Grid.Column="2" Grid.Row="1">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding IncrementPersonsInHouseholdCommand}" Grid.Column="2" Grid.Row="1">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding IncrementPersonsInHouseholdCommand}" Grid.Column="3" Grid.Row="1">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
 
                 <TextBlock Text="{Binding ShopAhead, StringFormat='Number of days to shop for: {0}', Mode=OneWay}" Grid.Row="2" VerticalAlignment="Center" Height="16" Margin="0,7"/>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding DecrementShopAheadCommmand}" Grid.Column="1" Grid.Row="2">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding DecrementShopAheadCommmand}" Grid.Column="2" Grid.Row="2">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding IncrementShopAheadCommand}" Grid.Column="2" Grid.Row="2">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding IncrementShopAheadCommand}" Grid.Column="3" Grid.Row="2">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
 
                 <TextBlock Text="Start up screen:" Grid.Row="3" VerticalAlignment="Center"/>
-                <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" ItemsSource="{Binding Path=UriList}" SelectedItem="{Binding Path=SelectedPage}"/>
+                <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" ItemsSource="{Binding Path=UriList}" SelectedItem="{Binding Path=SelectedPage}" IsEditable="True" IsReadOnly="True" Text="Pick a window"/>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
