ToolKit og Anders er biZexual

--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -155,5 +155,6 @@
         </ItemsPanelTemplate>
         <!--End: Meal planning Page Template for day listboxes-->
         
+        <!--Start: -->
     </Application.Resources>
 </Application>
