--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:t="http://schemas.microsoft.com/netfx/2007/xaml/presentation"
+      xmlns:t="http://schemas.xceed.com/wpf/xaml/toolkit"
       xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels"
       xmlns:UserControls="clr-namespace:FoodPlanner.UserControls"
       mc:Ignorable="d" 
@@ -101,15 +101,15 @@
                     <!--<TextBlock Text="{Binding StockIngredient.Ingredient.Name, StringFormat=Name: {0}, Mode=OneWay}" Grid.Row="5"/>-->
                 </StackPanel>
 
-                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewStockIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2"/>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewStockIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,0,200,0"/>
                 <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="2">
                     <TextBlock Text="Quantity: "/>
                     <TextBlock Text="{Binding StockIngredient.Quantity}"/>
                     <!--<TextBlock Text="{Binding InventoryIngredient.Quantity, StringFormat=Quantity: {0}}" Grid.Row="7"/>-->
                 </StackPanel>
-
-                <TextBox x:Name="QuantityTextBox" Text="{Binding StockIngredient.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.ColumnSpan="2"/>
-
+                
+                <!--<TextBox x:Name="QuantityTextBox" Text="{Binding StockIngredient.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.ColumnSpan="2"/>-->
+                <t:DecimalUpDown Grid.Row="5" Margin="0,0,168,0" TextAlignment="Left" Value="{Binding StockIngredient.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Watermark="Enter Quantity"/>
                 <TextBlock Text="{Binding StockIngredient.Ingredient.Unit, Mode=OneWay, StringFormat=Unit: {0}}" Grid.Row="6"/>
                 <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding AddNewStockIngredientCommand}" Grid.Row="7" Grid.Column="1">
                     <Button.Background>
@@ -143,12 +143,12 @@
                     <TextBlock Text="Name: " Grid.Row="2" Grid.ColumnSpan="2"/>
                     <TextBlock Text="{Binding GreyListInventoryIngredient.Ingredient.Name}"/>
                 </StackPanel>
-                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewGreyedIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2"/>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewGreyedIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,0,200,0"/>
                 <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="2">
                     <TextBlock Text="Rating: "/>
                     <TextBlock Text="{Binding GreyListInventoryIngredient.IngredientValue}"/>
                 </StackPanel>
-                <TextBox Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding GreyListInventoryIngredient.IngredientValue, Mode=TwoWay}"/>
+                <Slider Grid.Row="5" Grid.ColumnSpan="2" Minimum="1" Maximum="100" Value="{Binding GreyListInventoryIngredient.IngredientValue, Mode=TwoWay}"/>
                 <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding AddNewGryedIngredientCommand}" Grid.Row="6" Grid.Column="1" Height="30" Margin="2,2,2,0" VerticalAlignment="Top">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
@@ -157,13 +157,21 @@
 
 
                 <TextBlock Text="Rated ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="7" Grid.ColumnSpan="2"/>
-                <ListBox x:Name="FavoriteIngredientsList" SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="8" Grid.ColumnSpan="2">
+                <ListView SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="8" Grid.ColumnSpan="2">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
+                            <GridViewColumn Header="Rating"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                <!--<ListBox x:Name="FavoriteIngredientsList" SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="8" Grid.ColumnSpan="2">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Path=Ingredient.Name}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-                </ListBox>
+                </ListBox>-->
                 <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveGreyListIngredientCommand}" Content="Remove" Grid.Row="9" Grid.Column="1">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
@@ -202,7 +210,7 @@
                 </Button>
 
                 <TextBlock Text="Add unwanted ingredient" Style="{StaticResource TextUnderTitle}" Grid.Row="4" Grid.ColumnSpan="2"/>
-                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="5"  Grid.ColumnSpan="2"/>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="5"  Grid.ColumnSpan="2" Margin="0,0,200,0"/>
             </Grid>
         </StackPanel>
     </ScrollViewer>
