--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -154,7 +154,9 @@
             <WrapPanel Orientation="Horizontal" Background="{StaticResource BackgroundColour}"/>
         </ItemsPanelTemplate>
         <!--End: Meal planning Page Template for day listboxes-->
-        
+        <DataTemplate x:Key="StockListRatingCellTemplate">
+            <TextBlock Text="{Binding Path=IngredientValue}" Foreground="Black"/>
+        </DataTemplate>
         <!--Start: -->
     </Application.Resources>
 </Application>
