#7 Done Ændret template'en til at have en textblock stedet for en label, og har derefter givet den texttrimming

--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -146,7 +146,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Label Content="{Binding Recipe.Title}" FontSize="12"/>
+                <TextBlock Text="{Binding Recipe.Title}" FontSize="12" TextTrimming="CharacterEllipsis" Width="100"/>
                 <Label Content="{Binding Participants}" ContentStringFormat="Planned for {0} person(s)" FontSize="10" Grid.Row="1"/>
             </Grid>
         </DataTemplate>
