--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -35,7 +35,7 @@
         </Button>
 
         <StackPanel Grid.Column="2" Orientation="Horizontal">
-            <Label Content="{Binding Path=SuccesText}"/>
+            <Label Content="{Binding Path=SuccesText}" Foreground="{Binding Path=SuccesTextColour}"/>
             <DatePicker SelectedDate="{Binding activeDate, Mode=TwoWay}" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Margin="0,2"/>
             <Button Command="{Binding StartDialogCommand}" Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Right" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}" Margin="2,3,2,1">
                 <Button.Background>
