--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -176,6 +176,7 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
+                    <ColumnDefinition/>
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -204,6 +205,7 @@
 
                 <TextBlock Text="Add unwanted ingredient" Style="{StaticResource TextUnderTitle}" Grid.Row="1" Grid.ColumnSpan="2"/>
                 <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="2"  Grid.ColumnSpan="2" Margin="0,0,200,0"/>
+                <Label Content="{Binding Path=BlackedDublicateResult}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Foreground="Red"/>
             </Grid>
         </StackPanel>
     </ScrollViewer>
