--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -59,6 +59,7 @@
                 <TextBlock Text="Start up screen:" Grid.Row="3" VerticalAlignment="Center"/>
                 <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" ItemsSource="{Binding Path=UriList}" SelectedItem="{Binding Path=SelectedPage}" IsEditable="True" IsReadOnly="True" Text="{Binding Path=CurrenStartUpPage, Mode=OneTime}"/>
             </Grid>
+            
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -97,21 +98,9 @@
                 </Button>
 
                 <TextBlock Text="Add a new stock ingredient" Grid.Row="1" Style="{StaticResource TextUnderTitle}" Grid.ColumnSpan="2"/>
-                <StackPanel Grid.Row="2" Orientation="Horizontal" Grid.ColumnSpan="2">
-                    <TextBlock Text="Name: "/>
-                    <TextBlock Text="{Binding StockIngredient.Ingredient.Name}" FontSize="13" FontStyle="Oblique"/>
-                </StackPanel>
+                <TextBlock Text="Name" Grid.Row="2"/>
 
                 <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddNewStockIngredientCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,0,200,0"/>
-                <!--<StackPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="2">
-                    <TextBlock Text="Quantity: "/>
-                    <TextBlock Text="{Binding StockIngredient.Quantity}"  FontSize="13" FontStyle="Oblique"/>
-                    <TextBlock Text="{Binding InventoryIngredient.Quantity, StringFormat=Quantity: {0}}" Grid.Row="7"/>
-                </StackPanel>-->
-                
-                <!--<TextBox x:Name="QuantityTextBox" Text="{Binding StockIngredient.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.ColumnSpan="2"/>-->
-                <!--<t:DecimalUpDown Grid.Row="5" Margin="0,0,168,0" TextAlignment="Left" Value="{Binding StockIngredient.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Minimum="0.1"/>-->
-                <!--<TextBlock Text="{Binding StockIngredient.Ingredient.Unit, Mode=OneWay, StringFormat=Unit: {0}}" Grid.Row="6" FontStyle="Oblique"/>-->
             </Grid>
 
             <Grid>
@@ -170,6 +159,7 @@
                 </Button>
 
             </Grid>
+            
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -182,28 +172,30 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
                     <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock Text="Unwanted Ingredients" Style="{StaticResource TextblockTitle}" Grid.ColumnSpan="2"/>
-                <TextBlock Text="Unwanted ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="3" Grid.ColumnSpan="2"/>
-                <ListView SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.BlacklistIngredients}" Grid.Row="4" Grid.ColumnSpan="2">
+                <TextBlock Text="Unwanted ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="4" Grid.ColumnSpan="2"/>
+                <ListView SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.BlacklistIngredients}" Grid.Row="5" Grid.ColumnSpan="2">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name" Width="Auto" CellTemplate="{StaticResource ShoppingListNameCell}"/>
                         </GridView>
                     </ListView.View>
                 </ListView>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveIngredientFromUnwantedIngredientsCommand}" Grid.Row="5" Grid.Column="2">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveIngredientFromUnwantedIngredientsCommand}" Grid.Row="6" Grid.Column="2">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
 
                 <TextBlock Text="Add unwanted ingredient" Style="{StaticResource TextUnderTitle}" Grid.Row="1" Grid.ColumnSpan="2"/>
-                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="2"  Grid.ColumnSpan="2" Margin="0,0,200,0"/>
-                <Label Content="{Binding Path=BlackedDublicateResult}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Foreground="Red"/>
-            </Grid>
+                <TextBlock Text="Name" Grid.Row="2"/>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="3"  Grid.ColumnSpan="2" Margin="0,0,200,0"/>
+                <Label Content="{Binding Path=BlackedDublicateResult}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Foreground="Red"/>
+            </Grid>           
         </StackPanel>
     </ScrollViewer>
 </Page>
