--- a/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
@@ -30,8 +30,13 @@
         <Border Grid.Column="0"  BorderThickness=" 2,2,1,2" BorderBrush="Black"/>
         <Border Grid.Column="1"  BorderThickness=" 1,2,2,2" BorderBrush="Black"/>
 
-        <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToInventoryCommand}"
-                                             MaximumItems="10" Grid.Row="0" />
+        
+        <StackPanel>
+            <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToInventoryCommand}"
+                                                 MaximumItems="10" Grid.Row="0" />
+
+            <ComboBox ItemsSource="{Binding SortDescriptionNames}" SelectedIndex="{Binding SelectedSortIndex}"></ComboBox>
+        </StackPanel>
 
         <ListView Grid.Row="1" ItemsSource="{Binding InventoryIngredients}" Background="{StaticResource BackgroundColour}">
             <ListView.View>
