--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -195,7 +195,17 @@
                 <TextBlock Text="Name" Grid.Row="2"/>
                 <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="3"  Grid.ColumnSpan="2" Margin="0,0,200,0"/>
                 <Label Content="{Binding Path=BlackedDublicateResult}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Foreground="Red"/>
-            </Grid>           
+            </Grid>  
+            
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="Direts" Style="{StaticResource TextblockTitle}" Grid.Column="0"/>
+
+                
+            </Grid>            
         </StackPanel>
     </ScrollViewer>
 </Page>
